--- a/WebRoot/static/css/mainframe.css
+++ b/WebRoot/static/css/mainframe.css
@@ -95,23 +95,6 @@ a:hover {
     text-shadow: #000 1px 1px 4px;
     background: no-repeat left center;
     padding-left: 30px; }
-  .body a {
-    color: #EEE;
-    text-shadow: #000 1px 1px 4px;
-    display: block;
-    float: left;
-    padding: 1%;
-    margin: 1%;
-    width: 29%;
-    height: 110px;
-    overflow: hidden;
-    font-size: 30px;
-    background: no-repeat right bottom;
-    opacity: 0.7;
-    -moz-opacity: 0.7;
-    opacity: 0.7; }
-  .body a:hover {
-    opacity: 1; }
 
 .foot {
   color: #EEE;
@@ -198,7 +181,17 @@ a:hover {
       -webkit-opacity: 0.9;
       -o-webkit-opacity: 0.9;
       width: 310px;
-      height: 200px; }
+      height: 200px;
+      overflow: hidden;
+      position: relative; }
+      .flowview-wrap .flowview .block .remove {
+        position: absolute;
+        right: 5px;
+        display: none; }
+        .flowview-wrap .flowview .block .remove:hover {
+          background-color: #AAA; }
+      .flowview-wrap .flowview .block:hover .remove {
+        display: block; }
       .flowview-wrap .flowview .block .feed {
         cursor: pointer;
         padding: 5px; }
