--- a/WebRoot/static/scss/mainframe.scss
+++ b/WebRoot/static/scss/mainframe.scss
@@ -169,6 +169,11 @@ a:hover {
 				max-width: 25px;
 				max-height: 25px;
 			}
+			&.offline {
+				img {
+					opacity: 0.4;
+				}
+			}
 		}
 		.friend-list-item:hover {
 			background: rgba(0, 0, 0, 0.7);
