--- a/WebRoot/static/scss/mainframe.scss
+++ b/WebRoot/static/scss/mainframe.scss
@@ -174,9 +174,18 @@ a:hover {
 					opacity: 0.4;
 				}
 			}
-		}
-		.friend-list-item:hover {
-			background: rgba(0, 0, 0, 0.7);
+			i {
+				visibility: hidden;
+				&:hover {
+					background-color: rgba(255, 255, 255, 0.3);
+				}
+			}
+			&:hover {
+				background: rgba(0, 0, 0, 0.7);
+				i {
+					visibility: visible;
+				}
+			}
 		}
 	}
 }
