--- a/WebRoot/static/scss/flowview.scss
+++ b/WebRoot/static/scss/flowview.scss
@@ -65,8 +65,11 @@
 					}
 				}
 				.text {
-					width: 150px;
+					width: 210px;
 					min-height: 150px;
+					font-size: 1.4em;
+					line-height: 1.5em;
+					color: #222;
 					b.title {
 						font-size: 17px;
 						display: block;
