--- a/WebRoot/static/scss/tourlog.scss
+++ b/WebRoot/static/scss/tourlog.scss
@@ -24,6 +24,11 @@
 			textarea {
 				width: 96%;
 			}
+			.item {
+				padding: 5px;
+				margin: 5px;
+				border-top: 1px dashed #777;
+			}
 		}
 	}
 }
