--- a/WebRoot/static/css/tourlog.css
+++ b/WebRoot/static/css/tourlog.css
@@ -22,3 +22,7 @@
       width: 35%; }
       #tourLogPage .block.comment textarea {
         width: 96%; }
+      #tourLogPage .block.comment .item {
+        padding: 5px;
+        margin: 5px;
+        border-top: 1px dashed #777; }
