--- a/WebRoot/static/scss/tourlog.scss
+++ b/WebRoot/static/scss/tourlog.scss
@@ -5,6 +5,8 @@
 	width: 90%;
 	margin: 0 auto;
 	border-radius: 5px;
+	border: 1px solid #EEE;
+	box-shadow: 1px 1px 10px #000;
 	.block {
 		height: 400px;
 		overflow-y: auto;
