--- a/WebRoot/static/css/mainframe.css
+++ b/WebRoot/static/css/mainframe.css
@@ -171,6 +171,7 @@ a:hover {
       -moz-opacity: 1;
       -webkit-opacity: 1;
       -o-webkit-opacity: 1;
+      background: rgba(255, 255, 255, 0.9);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       border: 1px solid rgba(82, 168, 236, 0.8); }
     .flowview-wrap .flowview .column {
@@ -180,7 +181,7 @@ a:hover {
       cursor: pointer;
       border-radius: 2px;
       margin: 8px;
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.8);
       border: 1px solid #EEE;
       box-shadow: #000 2px 2px 5px;
       opacity: 0.9;
@@ -276,7 +277,9 @@ a:hover {
   zoom: 1;
   width: 90%;
   margin: 0 auto;
-  border-radius: 5px; }
+  border-radius: 5px;
+  border: 1px solid #EEE;
+  box-shadow: 1px 1px 10px #000; }
   #tourLogPage .block {
     height: 400px;
     overflow-y: auto;
