--- a/WebRoot/static/css/tourlog.css
+++ b/WebRoot/static/css/tourlog.css
@@ -4,7 +4,9 @@
   zoom: 1;
   width: 90%;
   margin: 0 auto;
-  border-radius: 5px; }
+  border-radius: 5px;
+  border: 1px solid #EEE;
+  box-shadow: 1px 1px 10px #000; }
   #tourLogPage .block {
     height: 400px;
     overflow-y: auto;
