finish site message

--- a/WebRoot/static/scss/mainframe.scss
+++ b/WebRoot/static/scss/mainframe.scss
@@ -117,6 +117,17 @@ a:hover {
 	left: 0;
 	right: 0;
 	background: rgba(0, 0, 0, 0.5);
+	.counter {
+		display: inline-block;
+		padding: 5px;
+		border-radius: 5px;
+		color: #000;
+		background: #FFF;
+		text-shadow: none;
+		line-height: 10px;
+		font-size: 12px;
+		margin-left: 5px;
+	}
 	ul li {
 		cursor: pointer;
 		background: rgba(0, 0, 0, 0.7);
